--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port = $PORT
-
+#server.port = $PORT
+#
 spring.application.name = campoo-events
-
-spring.datasource.url=jdbc:postgresql://192.168.89.17:5432/campoo
-spring.datasource.username=campoo
-spring.datasource.password=password
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driverClassName=org.postgresql.Driver
+#
+#spring.datasource.url=jdbc:postgresql://192.168.89.17:5432/campoo
+#spring.datasource.username=campoo
+#spring.datasource.password=password
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.generate-ddl=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driverClassName=org.postgresql.Driver
