--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,25 @@
-#server.port = $PORT
-#
 spring.application.name = campoo-events
-#
+
+#LOCAL CONNECTION
 #spring.datasource.url=jdbc:postgresql://192.168.89.17:5432/campoo
 #spring.datasource.username=campoo
 #spring.datasource.password=password
 #
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.generate-ddl=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driverClassName=org.postgresql.Driver
+
+
+
+#spring.datasource.url=ec2-52-48-159-67.eu-west-1.compute.amazonaws.com/dddpipdkhng529
+#spring.datasource.username=mbqvkaseojfdzb
+#spring.datasource.password=password
+#
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+
+
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.driverClassName=org.postgresql.Driver
