--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,8 @@ spring.datasource.password=55055e45530c53f2c5fa9b23dbe4986dd4aecb01eb53399a3e291
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
 
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.driverClassName=org.postgresql.Driver
