--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,5 @@ spring.jpa.show-sql=true
 
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
