--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.datasource.password=55055e45530c53f2c5fa9b23dbe4986dd4aecb01eb53399a3e291
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
 
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
